syntax = "proto3";

option csharp_namespace = "UserService.Protos";

package user;

service Users {

  rpc GetUser (GetUserRequest) returns (UserResponse);

  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);

  rpc Login (LoginRequest) returns (LoginResponse);
}

message GetUserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    int32 user_id = 2;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  int32 id = 1;
}